@@ -94,8 +94,9 @@ extern GdkRectangle			resize_handles_rect[8];
 extern guint				resize_handles_status;
 extern guint				resize_handle_size;
 extern GtkWidget			*right_side;
-extern gboolean				screenshots_enabled;
 extern gint					screenshot_command_num;
+extern guint				screenshot_delay_time;
+extern gboolean				screenshots_enabled;
 extern gboolean				show_control_bar;
 extern GList				*slides;
 extern guint				start_behaviour;
