@@ -97,7 +97,7 @@ void menu_screenshots_capture(void)
 	gtk_dialog_run(GTK_DIALOG(message_dialog));
 	gtk_widget_destroy(message_dialog);
 
-	// Minimise Salasaga so the user can choose another application
+	// Minimise the main window so the user can choose another application
 	gtk_window_iconify(GTK_WINDOW(main_window));
 
 	// * Determine the area of screen covered by the window that the user wants to capture *
@@ -345,6 +345,7 @@ void menu_screenshots_capture(void)
 	g_key_file_set_integer(lock_file, "Project", "X_Length", capture_width);  // Width of screen area to grab
 	g_key_file_set_integer(lock_file, "Project", "Y_Offset", capture_y);  // Top left Y coordinate of screen area
 	g_key_file_set_integer(lock_file, "Project", "Y_Length", capture_height);  // Height of screen area to grab
+	g_key_file_set_integer(lock_file, "Project", "Screenshot_Delay", screenshot_delay_time);  // Number of seconds to delay the screenshot capture
 
 	// Create IO channel for writing to
 	output_file = g_io_channel_new_file(full_file_name, "w", &error);
