@@ -12,7 +12,9 @@
  * Text layers can now be any of the DejaVu fonts.
  * Several minor improvements for the time line area.
  * Added a status icon.
- * Updated the screen capture to display visual notification messages when screenshots are taken.
+ * Added a "screenshot delay" preference, in seconds, which can range from 0 to 60.
+ * Updated the screen capture to display visual notification messages when screenshots are
+   taken.
  * Updated to work on Centos 5.3.
  * Minor bug fixes.
 
